# Hexapod_Kinematic_Controller

./: README.md
src/hexapod_kinematic/: CMakeLists.txt  hexapod_kinematic.xml  package.xml
src/hexapod_kinematic/include/: control.h
src/hexapod_kinematic/include/hexapod_kinematic/: control.h  ik.h
src/hexapod_kinematic/launch/: hexapod_kinematic.launch
src/hexapod_kinematic/params/: hexapod.yaml
src/hexapod_kinematic/scripts/: get_link_state.py
src/hexapod_kinematic/src/: control.cpp  hexapod_kinematic.cpp  ik.cpp
